instana-yaml/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    project: instana
    tier: web
spec:
  replicas: 2
  selector:
    matchLabels:
      project: instana
      tier: web
  template:
    metadata:
      labels:
        project: instana
        tier: web
    spec:
      containers:
      - name: web
        image: 522814728660.dkr.ecr.ap-south-1.amazonaws.com/instana/frontend:v1
        ports:
        - containerPort: 80
        resources:
            requests:
              memory: 128Mi
              cpu: 30m
            limits:
              memory: 256Mi
              cpu: 60m
        readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5      
            periodSeconds: 10           
            timeoutSeconds: 2           
            successThreshold: 1
            failureThreshold: 3          
        livenessProbe:
            httpGet:
              path: /             
              port: 80
            initialDelaySeconds: 10    
            periodSeconds: 10          
            timeoutSeconds: 2            
            successThreshold: 1      
            failureThreshold: 3
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: web-config
