instana-yaml/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    project: instana
    tier: web
spec:
  type: ClusterIP
  selector:
    project: instana
    tier: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
